Creado formulario de logueo/deslogueo, logica logueo/deslogueo y registro de nuevos usuarios

--- a/scripts/dia16_ProgramaUnaAplicacionWebDeTareasPendientes/mis_entornos/mi_web/src/proyecto/base/templates/base/tarea_list.html
+++ b/scripts/dia16_ProgramaUnaAplicacionWebDeTareasPendientes/mis_entornos/mi_web/src/proyecto/base/templates/base/tarea_list.html
@@ -1,3 +1,13 @@
+{% if request.user.is_authenticated %}
+    <p>{{request.user}}</p> <!-- Esta variable representa el usuario registrado -->
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit">Salir</button>
+    </form>
+{% else %}
+    <a href="{% url 'login' %}">Ingresar</a>
+{% endif %}
+<hr>
 <h1>Lista de pendientes</h1>
 <a href="{% url 'crear_tarea' %}">Crear nueva tarea</a>
 <table>
