Finalizacion del proyecto del dia16_ProgramaUnaAplicacionWebDeTareasPendientes

--- a/scripts/dia16_ProgramaUnaAplicacionWebDeTareasPendientes/mis_entornos/mi_web/src/proyecto/base/templates/base/tarea_list.html
+++ b/scripts/dia16_ProgramaUnaAplicacionWebDeTareasPendientes/mis_entornos/mi_web/src/proyecto/base/templates/base/tarea_list.html
@@ -10,6 +10,10 @@
 <hr>
 <h1>Lista de pendientes</h1>
 <a href="{% url 'crear_tarea' %}">Crear nueva tarea</a>
+<form method="GET">
+    <input type="text" name="area_buscar" value="{{valor_buscado}}">
+    <input type="submit" value="Buscar">
+</form>
 <table>
     <tr>
         <th>Elementos</th>
@@ -19,7 +23,6 @@
     {% for tarea in lista_tareas %}
     <tr>
         <td>{{tarea.titulo}}</td>
-        <td><a href="{% url 'detalle_tarea' tarea.id %}">Ver</a></td>
         <td><a href="{% url 'editar_tarea' tarea.id %}">Editar</a></td>
         <td><a href="{% url 'eliminar_tarea' tarea.id %}">Eliminar</a></td>
     </tr>
